tests/baselines/reference/assignmentCompatWithConstructSignatures2.errors.txt
==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts (12 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        f: new (x: number) => void;
    }
    var t: T;
    var a: { f: new (x: number) => void };
    
    t = a;
    a = t;
    
    interface S {
        f: new (x: number) => string;
    }
    var s: S;
    var a2: { f: new (x: number) => string };
    t = s;
    t = a2;
    a = s;
    a = a2;
    
    // errors
    t = () => 1;
    ~
!!! error TS2322: Type '() => number' is not assignable to type 'T':
!!! error TS2322:   Property 'f' is missing in type '() => number'.
    t = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: number) => string' is not assignable to type 'T':
!!! error TS2322:   Property 'f' is missing in type '(x: number) => string'.
    a = () => 1;
    ~
!!! error TS2322: Type '() => number' is not assignable to type '{ f: new (x: number) => void; }':
!!! error TS2322:   Property 'f' is missing in type '() => number'.
    a = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: number) => string' is not assignable to type '{ f: new (x: number) => void; }':
!!! error TS2322:   Property 'f' is missing in type '(x: number) => string'.
    
    interface S2 {
        f(x: string): void;
    }
    var s2: S2;
    var a3: { f(x: string): void };
    // these are errors
    t = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'T':
!!! error TS2322:   Types of property 'f' are incompatible:
!!! error TS2322:     Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
    t = a3;
    ~
!!! error TS2322: Type '{ f(x: string): void; }' is not assignable to type 'T':
!!! error TS2322:   Types of property 'f' are incompatible:
!!! error TS2322:     Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
    t = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: string) => number' is not assignable to type 'T':
!!! error TS2322:   Property 'f' is missing in type '(x: string) => number'.
    t = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: string) => string' is not assignable to type 'T':
!!! error TS2322:   Property 'f' is missing in type '(x: string) => string'.
    a = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type '{ f: new (x: number) => void; }':
!!! error TS2322:   Types of property 'f' are incompatible:
!!! error TS2322:     Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
    a = a3;
    ~
!!! error TS2322: Type '{ f(x: string): void; }' is not assignable to type '{ f: new (x: number) => void; }':
!!! error TS2322:   Types of property 'f' are incompatible:
!!! error TS2322:     Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
    a = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: string) => number' is not assignable to type '{ f: new (x: number) => void; }':
!!! error TS2322:   Property 'f' is missing in type '(x: string) => number'.
    a = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: string) => string' is not assignable to type '{ f: new (x: number) => void; }':
!!! error TS2322:   Property 'f' is missing in type '(x: string) => string'.
    